# AnkiAICardCreationToolbox

./: .gitignore  README.md  Taskfile.yaml  opencode.json  package-lock.json
.github/: dependabot.yml
.github/workflows/: deploy.yaml  update-open-pr-branches.yaml
backend/AnkiAICardCreationToolboxBackend/: Dockerfile  main.py  pyproject.toml
backend/AnkiAICardCreationToolboxBackend/ankiaicardcreationtoolboxbackend/: main.py
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/: __init__.py  agent.py  knowledge_base_creation.py  main.py  tools.py
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/data/: knowledge_base.json
backend/AnkiAICardCreationToolboxBackend/src/ankiaicardcreationtoolboxbackend/knowledge_base/: chain.py  knowledge_base_config.py  knowledge_base_creation.py
backend/AnkiAICardCreationToolboxBackend/tests/: conftest.py  test_agent.py  test_api.py  test_knowledge_base_creation.py
frontend/AnkiAICardCreationFrontend/: package-lock.json  package.json  vitest.config.ts
frontend/AnkiAICardCreationFrontend/src/: App.vue
frontend/AnkiAICardCreationFrontend/src/components/: TextInput.vue
frontend/AnkiAICardCreationFrontend/src/components/__tests__/: HelloWorld.spec.ts  TextInput.spec.ts
frontend/AnkiAICardCreationFrontend/src/composables/: useCardCreation.ts
frontend/AnkiAICardCreationFrontend/src/composables/__tests__/: useCardCreation.spec.ts
frontend/AnkiAICardCreationFrontend/src/router/: index.ts
infrastructure/: README.md  cloud_run.tf  main.tf  registry.tf
